# whisperTD

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: asr_over_segmentation_pipeline_tests.py  test_pipelines.py
whispertd/generation/: ct2_utils.py
whispertd/models/: modeling_ct2_utils.py
whispertd/pipelines/: asr_over_segmentation.py
